# claude-agent-harness-opt

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  demo.tape  pyproject.toml
claude_agent_harness_opt/: claude_judge.py  cli.py  e2e.py  import_run.py  live_harness.py  matrix_coverage.py  model_matrix.py  pr_packets.py  snapshots.py
claude_agent_harness_optimization/: cli.py  pr_packets.py
claude_agent_prompting/: __init__.py  agent_audit.py  claude_judge.py  cli.py  evals.py  harness_optimizer.py  model_matrix.py  prompt_builder.py  tool_selection.py  trace_review.py
docs/: agent-sdk-harnesses.md  autoresearch-hill-climbing.md  codex-and-model-migration-harnesses.md  confirmed-improvements.md  credentialed-service-probes.md  firecrawl-mcp-tool-tuning.md  frontier-stress-2026-07-01.md  github-mcp-tool-tuning.md  gstack-skill-routing-audit.md  harness-optimization.md  insforge-mcp-tool-tuning.md  live-harness-hardening.md  model-matrix.md  public-mcp-sweep.md  repeatable-harness-lab.md  screenpipe-mcp-tool-tuning.md  sdk-harness-coverage.md  setup.md  skills-vs-tools.md  source-map.md  supabase-mcp-tool-tuning.md  surface-inventory.md  techniques.md  tool-selection-optimization.md  tool-writing-best-practices.md  tool_tuning_demo_sample.txt  trace-review.md  upstream-pr-flywheel.md  video-coverage-audit.md  yc-p2026-mcp-sweep.md
prompts/: agent_system_template.md  llm_judge.md
recipes/: agentic_search.json  coding_agent.json  computer_use_agent.json  data_analysis_agent.json
scripts/: build_gstack_skill_target.py  check_ci_surface.py  (+12 more)
(+178 files in other folders)
