[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-agent-harness-opt"
version = "0.1.0"
description = "Eval-driven harness optimizer for agent tools, traces, and model matrices"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Contributors" }]
dependencies = []

[project.scripts]
claude-agent-harness-opt = "claude_agent_harness_opt.cli:main"
